# tygle-docs

./: pyproject.toml
tygle_docs/: __init__.py  docs.py
tygle_docs/base/: __init__.py  batch_update_request.py
tygle_docs/rest/: docs.py  documents.py
tygle_docs/types/: __init__.py  write_control.py
tygle_docs/types/enums/: __init__.py  content_alignment.py  suggestions_view_mode.py  unit.py
tygle_docs/types/requests/: __init__.py  batch_update_body.py  delete_content_range_request.py  insert_inline_image_request.py  insert_table_request.py  replace_all_text_request.py  update_request.py  update_table_cell_style_request.py
tygle_docs/types/requests/models/: __init__.py  end_of_segment_location.py  location.py  table_cell_location.py  table_range.py
tygle_docs/types/resources/: __init__.py  body.py  document.py
tygle_docs/types/resources/body/: body.py
tygle_docs/types/resources/body/structural_element/: __init__.py  structural_element.py
tygle_docs/types/resources/models/: __init__.py  dimension.py  size.py
tygle_docs/types/resources/named_ranges/: __init__.py  named_ranges.py
tygle_docs/types/resources/named_ranges/named_range/: __init__.py  named_range.py
tygle_docs/types/resources/structural_element/: __init__.py  structural_element.py
tygle_docs/types/resources/structural_element/paragraph/: __init__.py
tygle_docs/types/resources/structural_element/table/: __init__.py  table.py
tygle_docs/types/responses/: __init__.py  batch_update_response.py  replace_all_text_response.py  update_response.py
tygle_docs/utils/: __init__.py  find.py
(+15 files in other folders)
