[tool.poetry]
name = "tygle-docs"
version = "0.1.2"
description = ""
authors = ["shmookoff <shmookoff@gmail.com>"]
readme = "README.md"
packages = [{include = "tygle_docs"}]

[tool.poetry.dependencies]
python = "^3.10"
tygle = "~0.2"


[tool.poetry.group.dev.dependencies]
black = "^22.6.0"
pylint = "^2.14.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
